tests/rosetta/transpiler/Scala/cartesian-product-of-two-or-more-lists-4.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/cartesian-product-of-two-or-more-lists-4.scala:80: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
      val last: Int = (a).size - BigInt(1)
                               ^
one error found
